<resources>
    
    <string name="app_name">智慧酒店</string>
    
    <string name="title_activity_main">智慧酒店</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="system_set_package">com.android.settings</string>
    <string name="system_dvb">com.hisu.dvbplayer</string>
    <string name="javascript_interface_media">AndroidMediaPlayer</string>
	<string name="javascript_interface_system">System</string>
	<string name="webview_useragent">Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Android/35.0.1916.114 Safari/537.36</string>
	<string name="soft_update_no">当前已是最新版本</string>
	<string name="soft_download_failed">下载失败，请检查下载地址是否正确！</string>
	<string name="soft_update_title">软件更新</string>
	<string name="soft_update_info">检测到新版本，立即更新吗？</string>
	<string name="soft_update_updatebtn">立即更新</string>
	<string name="soft_update_later">稍后更新</string>
	<string name="soft_updating">正在更新</string>
	<string name="app_download_title">应用下载</string>
	<string name="app_download_info">您确定要下载此应用吗？</string>
	<string name="app_download_updatebtn">立即下载</string>
	<string name="app_downloading">正在下载</string>
	<string name="soft_update_cancel">取消</string>
	<string name="dialog_warm_tip">温馨提示！</string>
	<string name="input_pwd">网络异常</string>
	<string name="error_tip">请检查网络连接</string>
	<string name="dialog_yes">确　认</string>
	<string name="dialog_no">取　消</string>
	<string name="dialog_gototv">看电视</string>
	
	   <string name="menu1">电视直播</string>
    <string name="menu2_1">高清影院</string>
    <string name="menu2_2">芒果TV</string>
    <string name="menu3">天气预报</string>
    <string name="menu4">智慧城市</string>
    <string name="menu5">电视应用</string>
    <string name="menu6">应用市场</string>
    <string name="menu7">一键助手</string>
    <string name="menu8">系统设置</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="no_message">应用未安装</string>
    <string name="channel_is_null">没有节目，请搜索</string>
    <string name="net_no_card">请检查智能卡是否插好</string>
    <string name="card_no_auth">请检查是否收视费欠费</string>
    <string name="net_no_connect">请检查网络是否连接好</string>
    <string name="net_no_auth">网络未授权</string>
    <string name="card_no_ready">请检查收费电视节目是否正常播放</string>
</resources>