<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bind_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="80dp"
        android:text="@string/dialog_warm_tip"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/input_pwd"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pwd_input"
            android:gravity="left|center_vertical"
            android:ellipsize="end"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/error_tip"
        android:textColor="#383838"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="15dp" >

        <Button
            android:id="@+id/gototv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pwd_btn"
            android:text="@string/dialog_gototv"
            android:textColor="@color/pwd_btn"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pwd_btn"
            android:text="@string/dialog_yes"
            android:textColor="@color/pwd_btn"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pwd_btn"
            android:text="@string/dialog_no"
            android:textColor="@color/pwd_btn"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>